# Minecraft-MistralMCP

./: README.md  index.js  package-lock.json  package.json  simple-implem.js  tsconfig.json
bridge-server/: .env.example  API_DOC.md  README.md  package-lock.json  package.json  test-requests.js
bridge-server/src/: api.ts  bot.ts  index.ts  types.ts
bridge-server/src/bot/: events.ts  index.ts
bridge-server/src/dm/: Orchestrator.ts  personas.ts  publish.ts  tools.ts
bridge-server/src/middleware/: errorHandler.ts  requestLogger.ts  validation.ts
bridge-server/src/quest/: PlanksQuestService.ts  QuestEngine.ts  QuestRepo.ts  SimpleGoldQuestService.ts
bridge-server/src/routes/: actions.ts  attack.ts  combat.ts  communication.ts  crafting.ts  dm.ts  events.ts  health.ts  index.ts  inventory.ts  movement.ts  quest.ts  quests.ts  status.ts  world.ts
bridge-server/src/services/: BotManager.ts  WebSocketManager.ts  bus.ts  registry.ts
bridge-server/src/types/: index.ts  quest.ts
bridge-server/src/utils/: net.ts
mcmap-api/: README.md  package-lock.json  package.json
mcmap-api/cubiomes/: cubiomes.js  cubiomes.wasm
mcmap-api/src/: cubiomes.ts  server.ts
mcquest-minimal/: .env  .env.example  README.md  SUMMARY.md  package-lock.json  package.json  test-chat.json  tsconfig.json
mcquest-minimal/src/: config.ts  index.ts
mcquest-minimal/src/bot/: BotGateway.ts  BotIntelligence.ts  CombatSystem.ts  ErrorHandling.ts  PathfindingEnhanced.ts  (+2 more)
minecraft-mcp/: .env  .gitignore  .python-version  main.py  mcp.json  pyproject.toml
src/: app.ts  bot.ts  quest.ts
(+20 files in other folders)
