[project]
name = "minecraft-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "cors>=1.0.1",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.3",
    "python-dotenv>=1.1.1",
    "typing>=3.10.0.0",
]
